fixed the footer

--- a/games.html
+++ b/games.html
@@ -124,15 +124,15 @@
         <a class="center" href="credits.html" class="footer-text">Credits</a>
         <a class="center" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
     </div>
-    <div class="footer-bottom">
-        <p>
-            © 2022 PorkyProductions. All Rights Reserved.
-        </p>
-        &nbsp;
-        <p>
-          Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" height="10px" onclick="addToCounter()"> at PorkyProductions
-        </p>
-    </div>
+    <div class="footer-bottom text-center" style="display: block;">
+      <p>
+          © 2022 PorkyProductions. All Rights Reserved.
+      </p>
+      <br>
+      <p>
+        Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
+      </p>
+  </div>
     <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
     </div>
