--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ porkyproductions.github.io
               <a class="center" href="credits.html" class="footer-text">Credits</a>
               <a class="center" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
           </div>
-          <div class="footer-bottom" style="display: block;">
+          <div class="footer-bottom text-center" style="display: block;">
               <p>
                   © 2022 PorkyProductions. All Rights Reserved.
               </p>
