--- a/404.html
+++ b/404.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <link rel="stylesheet" href="css/output.css" />
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png"/>
     <!--FAVICON-->
     <title>404 Page Not Found</title>
 </head>
-<body>
-    <img alt="PorkyProductions logo" src="assets/PPio logo.png" />
-    <h1 class="mainTitle">404</h1>
-    <h3 class="mainTitle">Thats an Error</h3>
-    <h4 class="mainBody">The page you are looking for does not exist</h4>
-    <h5 class="mainBody">Try going home</h5>
-    <button onclick="window.location.href='index.html'" class="center">
-        Home
-    </button>
+<body class="dark:bg-black dark:text-white">
+    <div class="center">
+        <h1 class="font-bold text-8xl">404</h1>
+        <h2 class="font-bold text-6xl">Page Not Found</h2>
+        <p>The page you are looking for does not exist.</p>
+        <a href="index.html" class="text-blue-800">Return to Homepage</a>
+    </div>
+    <img src="assets/HedgehogIcon.png" alt="HEDGEHOG" class="center">
 </body>
 </html>
 <!--Hi there reader. It looks like youve reached the end of our code. Thats pretty cool. Have you been working this entire time? Maybe give yourself a break. You work more productive when youre not tired :) -->
