add licensing information

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ porkyproductions.github.io
           </div>
           <div class="footer-bottom text-center" style="display: block;">
               <p>
-                  © 2022 PorkyProductions. All Rights Reserved.
+                  © 2022 PorkyProductions. All Rights Reserved. Licensed under the Apache-2.0 License
               </p>
               <br>
               <p>
