--- a/3DPrints.html
+++ b/3DPrints.html
@@ -103,15 +103,13 @@
         <a class="center" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
     </div>
     <div class="footer-bottom">
-        <div class="footer-bottom text-center" style="display: block;">
-            <p>
-                © 2022 PorkyProductions. All Rights Reserved.
-            </p>
-            <br>
-            <p>
-              Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
-            </p>
-        </div>
+        <p>
+            © 2022 PorkyProductions. All Rights Reserved.
+        </p>
+        &nbsp;
+        <p>
+          Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" height="10px" onclick="addToCounter()"> at PorkyProductions
+        </p>
     </div>
     <!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
     <script>
