fix: :zap: redid file structure for vite

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/output.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png"/>
-    <script src="./js/404.js"></script>
+    <script type="module" src="./ts/404.ts"></script>
     <!--FAVICON-->
     <title>404 Page Not Found</title>
 </head>
