--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ porkyproductions.github.io
     </script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script type="text/javascript" src="js/Utility.js"></script>
-    <script type="text/javascript" src="js/Header.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/secret.js"></script>
+    <script type="module" src="ts/Utility.ts"></script>
+    <script type="module" src="ts/Header.ts"></script>
+    <script type="module" src="ts/index.ts"></script>
+    <script type="module" src="ts/secret.ts"></script>
 
 <!--CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS------->
 <!--In-House-->
