--- a/develop.html
+++ b/develop.html
@@ -10,9 +10,9 @@
 
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script src="js/Header.js"></script>
-    <script src="js/Utility.js"></script>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/Header.js"></script>
+    <script type="module" src="ts/Utility.ts"></script>
+    <script type="module" src="ts/index.ts"></script>
 
     <link rel="stylesheet" href="css/output.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
