--- a/games.html
+++ b/games.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script src="js/Utility.js"></script>
-    <script src="js/Header.js"></script>
+    <script type="module" src="ts/Utility.ts"></script>
+    <script type="module" src="ts/Header.ts"></script>
 
     <!--CSS-----------------------------CSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSS-->
     <link rel="stylesheet" href="css/games.css" />
