--- a/3DPrints.html
+++ b/3DPrints.html
@@ -11,9 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script type="module" src="ts/Utility.ts"></script>
-    <script type="module" src="ts/Header.ts"></script>
-    <script type="module" src="ts/index.ts"></script>
+    <script type="module" src="./ts/Utility.ts"></script>
+    <script type="module" src="./ts/Header.ts"></script>
+    <script type="module" src="./ts/index.ts"></script>
 
     <link rel="stylesheet" href="css/output.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
@@ -92,23 +92,24 @@
     <div class="loader-wrapper loader-padding">
         <span class="loader"><span class="loader-inner"></span></span>  
     </div>
+    <!--BEYOND THIS POINT IS THE FOOTER -- NO TOUCHING OR ELSE IT WILL BREAK-->
     <div class="footer">
         <img src="assets/PPio logo.png" height="60" width="265" alt="porky productions logo" />
-        <a class="center" href="index.html" class="footer-text">Home</a>
-        <a class="center" href="games.html" class="footer-text">Games</a>
-        <a class="center" href="3DPrints.html" class="footer-text">3D Prints</a>
-        <a class="center" href="models.html" class="footer-text">Models</a>
-        <a class="center" href="develop.html" class="footer-text">Developments</a>
-        <a class="center" href="credits.html" class="footer-text">Credits</a>
-        <a class="center" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
+        <a class="center footer-text" href="index.html">Home</a>
+        <a class="center footer-text" href="games.html">Games</a>
+        <a class="center footer-text" href="3DPrints.html">3D Prints</a>
+        <a class="center footer-text" href="models.html">Models</a>
+        <a class="center footer-text" href="develop.html">Developments</a>
+        <a class="center footer-text" href="credits.html">Credits</a>
+        <a class="center footer-text" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
     </div>
-    <div class="footer-bottom">
+    <div class="footer-bottom text-center" style="display: block;">
         <p>
-            © 2022 PorkyProductions. All Rights Reserved.
+            © 2022 PorkyProductions. All Rights Reserved. Licensed under the Apache-2.0 License
         </p>
-        &nbsp;
+        <br>
         <p>
-          Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" height="10px" onclick="addToCounter()"> at PorkyProductions
+          Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
         </p>
     </div>
     <!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
