--- a/credits.html
+++ b/credits.html
@@ -61,19 +61,20 @@
    <div class="loader-wrapper loader-padding">
     <span class="loader"><span class="loader-inner"></span></span>  
 </div>
+<!--BEYOND THIS POINT IS THE FOOTER -- NO TOUCHING OR ELSE IT WILL BREAK-->
 <div class="footer">
     <img src="assets/PPio logo.png" height="60" width="265" alt="porky productions logo" />
-    <a class="center" href="index.html" class="footer-text">Home</a>
-    <a class="center" href="games.html" class="footer-text">Games</a>
-    <a class="center" href="3DPrints.html" class="footer-text">3D Prints</a>
-    <a class="center" href="models.html" class="footer-text">Models</a>
-    <a class="center" href="develop.html" class="footer-text">Developments</a>
-    <a class="center" href="credits.html" class="footer-text">Credits</a>
-    <a class="center" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
+    <a class="center footer-text" href="index.html">Home</a>
+    <a class="center footer-text" href="games.html">Games</a>
+    <a class="center footer-text" href="3DPrints.html">3D Prints</a>
+    <a class="center footer-text" href="models.html">Models</a>
+    <a class="center footer-text" href="develop.html">Developments</a>
+    <a class="center footer-text" href="credits.html">Credits</a>
+    <a class="center footer-text" href="https://practical-lamport-2debac.netlify.app/">Fallback Site</a>
 </div>
 <div class="footer-bottom text-center" style="display: block;">
     <p>
-        © 2022 PorkyProductions. All Rights Reserved.
+        © 2022 PorkyProductions. All Rights Reserved. Licensed under the Apache-2.0 License
     </p>
     <br>
     <p>
