finished vite building

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ porkyproductions.github.io
       <br />
   <!--NOTE: Titles and Headers are the "Raleway" font, everything else is Arial or sans-serif -->
       <div class="dark:bg-black dark:text-white">
-        <div class="padding-semi-large text-9xl text-center font-bold" id="mainLogoText" style="font-family: 'Raleway', sans-serif;" onclick="changeColorOfMainLogoText()">
+        <div class="padding-semi-large text-9xl sm:text-5xl md:text-9xl lg:text-9xl text-center font-bold" id="mainLogoText" style="font-family: 'Raleway', sans-serif;" onclick="changeColorOfMainLogoText()">
           <h1>PorkyProductions</h1>
         </div>
         </div>
