fix: :bug: fix bug

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -60,7 +60,7 @@
     </div>
     <br />
     <div class="dark:bg-black dark:text-white">
-        <div class="mainBody-grid" class="dark:bg-black dark:text-white">
+        <div class="dark:bg-black dark:text-white mainBody-grid">
             <div class="mainBody-tile">
                 <h1 class="mainTitleRale padding-medium">
                     The Imperial Credit
@@ -86,12 +86,9 @@
             </h1>
             <p class="mainBody">
                 Want more cool 3D printed models? Follow us on Instagram! <a href="https://www.instagram.com/3dprinting.hedgehogs/" target="_blank">@3dprinting.hedgehogs</a>
+            </p>
         </div>
         </div>
-    </div>
-    <div class="loader-wrapper loader-padding">
-        <span class="loader"><span class="loader-inner"></span></span>  
-    </div>
     <!--BEYOND THIS POINT IS THE FOOTER -- NO TOUCHING OR ELSE IT WILL BREAK-->
     <div class="footer">
         <img src="assets/PPio logo.png" height="60" width="265" alt="porky productions logo" />
@@ -118,6 +115,6 @@
           $(".loader-wrapper").fadeOut("slow");
         });
       </script>
-</body>
+    </body>
 </html>
 <!--Hi there reader. It looks like youve reached the end of our code. Thats pretty cool. Have you been working this entire time? Maybe give yourself a break. You work more productive when youre not tired :) -->
