--- a/models.html
+++ b/models.html
@@ -71,16 +71,16 @@
             <div class="mainBody-grid">
                 <div class="mainBody-tile">
                     <h3 class="ralewayBold">Hedgehog - By Tristan</h3>
-                    <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
+                    <a href="./models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
                     <br />
                     <img id="hedgehogModelPreview"
-                         src="images/HedgehogPreview_Front.png"
+                         src="./images/HedgehogPreview_Front.png"
                          width="300"
                          height="250"
                          alt="Hedgehog Model Front" />
                     <br />
                     <button id="button_HedgehogPreviewLeft" class="buttonBigger">
-                        <
+                        &lt;
                     </button>
                     <button id="button_HedgehogPreviewRight" class="buttonBigger">
                         >
@@ -109,7 +109,7 @@
     </div>
     <!--BEYOND THIS POINT IS THE FOOTER -- NO TOUCHING OR ELSE IT WILL BREAK-->
     <div class="footer">
-        <img src="assets/PPio logo.png" height="60" width="265" alt="porky productions logo" />
+        <img src="./assets/PPio logo.png" height="60" width="265" alt="porky productions logo" />
         <a class="center footer-text" href="index.html">Home</a>
         <a class="center footer-text" href="games.html">Games</a>
         <a class="center footer-text" href="3DPrints.html">3D Prints</a>
